# medical-education

./: README.md
backend/: .env  Cargo.toml  diesel.toml
backend/migrations/2024-06-29-120552_create_courses/: down.sql  up.sql
backend/migrations/2024-06-29-154239_create_users/: up.sql
backend/src/: auth.rs  course.rs  db.rs  main.rs  middleware.rs  models.rs  schema.rs
backend/wasm_module/: Cargo.toml
backend/wasm_module/src/: lib.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ContentCreator.tsx  CourseDetail.tsx  CourseForm.tsx  CourseList.tsx  LoginForm.tsx  RegisterForm.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: CourseDetailPage.tsx  Courses.tsx  Home.tsx  Profile.tsx
