[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
actix-rt = "2.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.2.1", features = ["postgres", "chrono", "r2d2"]}
dotenv = "0.15"
bcrypt = "0.15"
jsonwebtoken = "9"
futures = "0.3"
actix-service = "2.0.2"
pin-project = "1"

[build-dependencies]
diesel_migrations = "2.0.0"
